--- a/Sudokuvisualizer.ipynb
+++ b/Sudokuvisualizer.ipynb
@@ -305,10 +305,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-07T10:52:09.970432Z",
+     "start_time": "2025-01-07T10:51:54.443663Z"
+    }
+   },
+   "source": "!pip install onnxruntime\n",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting onnxruntime\n",
+      "  Downloading onnxruntime-1.20.1-cp310-cp310-win_amd64.whl.metadata (4.7 kB)\n",
+      "Collecting coloredlogs (from onnxruntime)\n",
+      "  Downloading coloredlogs-15.0.1-py2.py3-none-any.whl.metadata (12 kB)\n",
+      "Collecting flatbuffers (from onnxruntime)\n",
+      "  Downloading flatbuffers-24.12.23-py2.py3-none-any.whl.metadata (876 bytes)\n",
+      "Requirement already satisfied: numpy>=1.21.6 in c:\\users\\20203666\\music\\envtest\\lib\\site-packages (from onnxruntime) (1.24.3)\n",
+      "Requirement already satisfied: packaging in c:\\users\\20203666\\music\\envtest\\lib\\site-packages (from onnxruntime) (24.1)\n",
+      "Collecting protobuf (from onnxruntime)\n",
+      "  Downloading protobuf-5.29.2-cp310-abi3-win_amd64.whl.metadata (592 bytes)\n",
+      "Requirement already satisfied: sympy in c:\\users\\20203666\\music\\envtest\\lib\\site-packages (from onnxruntime) (1.13.1)\n",
+      "Collecting humanfriendly>=9.1 (from coloredlogs->onnxruntime)\n",
+      "  Downloading humanfriendly-10.0-py2.py3-none-any.whl.metadata (9.2 kB)\n",
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in c:\\users\\20203666\\music\\envtest\\lib\\site-packages (from sympy->onnxruntime) (1.3.0)\n",
+      "Collecting pyreadline3 (from humanfriendly>=9.1->coloredlogs->onnxruntime)\n",
+      "  Downloading pyreadline3-3.5.4-py3-none-any.whl.metadata (4.7 kB)\n",
+      "Downloading onnxruntime-1.20.1-cp310-cp310-win_amd64.whl (11.3 MB)\n",
+      "   ---------------------------------------- 0.0/11.3 MB ? eta -:--:--\n",
+      "   - -------------------------------------- 0.5/11.3 MB 2.4 MB/s eta 0:00:05\n",
+      "   ---- ----------------------------------- 1.3/11.3 MB 3.4 MB/s eta 0:00:03\n",
+      "   ------- -------------------------------- 2.1/11.3 MB 3.5 MB/s eta 0:00:03\n",
+      "   --------- ------------------------------ 2.6/11.3 MB 3.3 MB/s eta 0:00:03\n",
+      "   ----------- ---------------------------- 3.1/11.3 MB 3.1 MB/s eta 0:00:03\n",
+      "   ------------ --------------------------- 3.7/11.3 MB 3.0 MB/s eta 0:00:03\n",
+      "   -------------- ------------------------- 4.2/11.3 MB 3.0 MB/s eta 0:00:03\n",
+      "   ---------------- ----------------------- 4.7/11.3 MB 3.0 MB/s eta 0:00:03\n",
+      "   -------------------- ------------------- 5.8/11.3 MB 3.1 MB/s eta 0:00:02\n",
+      "   ----------------------- ---------------- 6.6/11.3 MB 3.2 MB/s eta 0:00:02\n",
+      "   -------------------------- ------------- 7.6/11.3 MB 3.4 MB/s eta 0:00:02\n",
+      "   ------------------------------ --------- 8.7/11.3 MB 3.5 MB/s eta 0:00:01\n",
+      "   --------------------------------- ------ 9.4/11.3 MB 3.6 MB/s eta 0:00:01\n",
+      "   ------------------------------------ --- 10.2/11.3 MB 3.6 MB/s eta 0:00:01\n",
+      "   -------------------------------------- - 11.0/11.3 MB 3.6 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 11.3/11.3 MB 3.6 MB/s eta 0:00:00\n",
+      "Downloading coloredlogs-15.0.1-py2.py3-none-any.whl (46 kB)\n",
+      "Downloading flatbuffers-24.12.23-py2.py3-none-any.whl (30 kB)\n",
+      "Downloading protobuf-5.29.2-cp310-abi3-win_amd64.whl (434 kB)\n",
+      "Downloading humanfriendly-10.0-py2.py3-none-any.whl (86 kB)\n",
+      "Downloading pyreadline3-3.5.4-py3-none-any.whl (83 kB)\n",
+      "Installing collected packages: flatbuffers, pyreadline3, protobuf, humanfriendly, coloredlogs, onnxruntime\n",
+      "Successfully installed coloredlogs-15.0.1 flatbuffers-24.12.23 humanfriendly-10.0 onnxruntime-1.20.1 protobuf-5.29.2 pyreadline3-3.5.4\n"
+     ]
+    }
+   ],
+   "execution_count": 1
+  },
+  {
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
-   "source": []
+   "execution_count": null,
+   "source": ""
   }
  ],
  "metadata": {
